:arrows_clockwise: Swap MetaVelvet for Canu

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,9 +13,8 @@ process {
     withName: kraken2krona {
         conda = 'bioconda::krakentools=1.2'
     }
-    withName: metavelvet {
-        container = 'https://depot.galaxyproject.org/singularity/metavelvet:1.2.02--pl5.22.0_2'
-        errorStrategy = 'ignore'
+    withName: assembly {
+        container = 'docker://greatfireball/canu'
     }
     withName: bwa {
         container = 'docker://staphb/bwa:0.7.17'
