:heavy_plus_sign: Add NCBI download of reference genome

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,9 @@ process {
     withName: sortsam {
         container = 'docker://staphb/samtools:1.12'
     }
+    withName: reference {
+        container = 'docker://ncbi/edirect:12.5'
+    }
 }
 singularity {
     enabled = true
