:art: Change references to jev

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,9 +10,6 @@ process {
     withName: filterreads {
         conda = 'bioconda::krakentools=1.2'
     }
-    withName: kraken2krona {
-        conda = 'bioconda::krakentools=1.2'
-    }
     withName: assembly {
         container = 'docker://greatfireball/canu'
     }
@@ -33,10 +30,9 @@ params {
     dev            = false
     devinputs      = 2
     help           = false
-    kmerLength     = 35
     outfolder      = ""
     readsfolder    = "."
-    runname        = "viral-metagenomics"
+    runname        = "jev-analysis"
     threads        = 4
     tracedir       = '.trace'
     timestamp      = now.format('yyyyMMdd-HH-mm-ss')
