:arrow_up: Upgrade Canu docker image

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ process {
         conda = 'bioconda::krakentools=1.2'
     }
     withName: assembly {
-        container = 'docker://greatfireball/canu'
+        container = 'docker://staphb/canu:2.0'
     }
     withName: bwa {
         container = 'docker://staphb/bwa:0.7.17'
