:heavy_plus_sign: Change to bowtie2 remapping for contigs and reads to reference genome

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,10 +13,19 @@ process {
     withName: assembly {
         container = 'docker://staphb/canu:2.0'
     }
-    withName: bwa {
-        container = 'docker://staphb/bwa:0.7.17'
+    withName: indexreference {
+        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
+    }
+    withName: convertcontigs {
+        container = 'library://millironx/default/julia:1.6.1'
+    }
+    withName: realign {
+        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
     withName: sortsam {
+        container = 'docker://staphb/samtools:1.12'
+    }
+    withName: sortreference {
         container = 'docker://staphb/samtools:1.12'
     }
     withName: reference {
