--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ process {
         conda = 'bioconda::krakentools=1.2'
     }
     withName: assembly {
-        container = 'docker://staphb/canu:2.0'
+        container = 'library://millironx/default/canu:2.1.1'
     }
     withName: indexreference {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
