--- a/nextflow.config
+++ b/nextflow.config
@@ -28,7 +28,7 @@ process {
     withName: sortreference {
         container = 'docker://staphb/samtools:1.12'
     }
-    withName: reference {
+    withName: pull_reference_genome {
         container = 'docker://ncbi/edirect:12.5'
     }
 }
