:telescope: Convert reference genome indexing

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,12 @@ Date now = new Date()
 
 process {
     errorStrategy = 'finish'
+    withName: pull_reference_genome {
+        container = 'docker://ncbi/edirect:12.5'
+    }
+    withName: index_reference_genome {
+        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
+    }
     withName: kraken {
         container = 'docker://staphb/kraken2:2.1.2-no-db'
         memory = '100 GB'
@@ -12,9 +18,6 @@ process {
     }
     withName: assembly {
         container = 'library://millironx/default/canu:2.1.1'
-    }
-    withName: indexreference {
-        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
     withName: convertcontigs {
         container = 'library://millironx/default/julia:1.6.1'
@@ -28,9 +31,7 @@ process {
     withName: sortreference {
         container = 'docker://staphb/samtools:1.12'
     }
-    withName: pull_reference_genome {
-        container = 'docker://ncbi/edirect:12.5'
-    }
+
 }
 singularity {
     enabled = true
@@ -38,6 +39,7 @@ singularity {
 params {
     dev            = false
     devinputs      = 2
+    genomeId       = 'NC_001437'
     help           = false
     outfolder      = ""
     readsfolder    = "."
@@ -46,6 +48,7 @@ params {
     tracedir       = '.trace'
     timestamp      = now.format('yyyyMMdd-HH-mm-ss')
 }
+/*
 timeline {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_timeline.html"
@@ -62,3 +65,4 @@ dag {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_dag.svg"
 }
+*/
