:telescope: Add Kraken classification to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,7 @@ process {
     withName: index_reference_genome {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
-    withName: kraken {
+    withName: read_classification_ont {
         container = 'docker://staphb/kraken2:2.1.2-no-db'
         memory = '100 GB'
     }
@@ -48,7 +48,6 @@ params {
     tracedir       = '.trace'
     timestamp      = now.format('yyyyMMdd-HH-mm-ss')
 }
-/*
 timeline {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_timeline.html"
@@ -65,4 +64,3 @@ dag {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_dag.svg"
 }
-*/
