--- a/nextflow.config
+++ b/nextflow.config
@@ -44,6 +44,9 @@ params {
     outfolder      = ""
     readsfolder    = "."
     runname        = "jev-analysis"
+    // Although I haven't seen it documented anywhere, 0 is unclassified reads
+    // and 10239 is viral reads
+    taxIdsToKeep   = '0 10239'
     threads        = 4
     tracedir       = '.trace'
     timestamp      = now.format('yyyyMMdd-HH-mm-ss')
