:telescope: Filter reads in the workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ process {
         container = 'docker://staphb/kraken2:2.1.2-no-db'
         memory = '100 GB'
     }
-    withName: filterreads {
+    withName: read_filtering_ont {
         conda = 'bioconda::krakentools=1.2'
     }
     withName: assembly {
