Add assembly to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,8 +16,8 @@ process {
     withName: read_filtering_ont {
         conda = 'bioconda::krakentools=1.2'
     }
-    withName: assembly {
-        container = 'library://millironx/default/canu:2.1.1'
+    withName: assembly_ont {
+        container = 'docker://staphb/canu:2.1.1'
     }
     withName: convertcontigs {
         container = 'library://millironx/default/julia:1.6.1'
