:wrench: Fix reference genome process selectors

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,10 +3,10 @@ Date now = new Date()
 
 process {
     errorStrategy = 'finish'
-    withName: pull_reference_genome {
+    withName: reference_genome_pull {
         container = 'docker://ncbi/edirect:12.5'
     }
-    withName: index_reference_genome {
+    withName: reference_genome_index {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
     withName: read_classification_ont {
