:telescope: Add contig conversion to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,7 +19,7 @@ process {
     withName: assembly_ont {
         container = 'docker://staphb/canu:2.1.1'
     }
-    withName: convertcontigs {
+    withName: contigs_convert_fastq {
         container = 'library://millironx/default/julia:1.6.1'
     }
     withName: realign {
