:telescope: Add remapping to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ process {
     withName: contigs_convert_fastq {
         container = 'library://millironx/default/julia:1.6.1'
     }
-    withName: realign {
+    withName: contigs_realign_reference {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
     withName: sortsam {
