:telescope: Add bam conversion to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,7 +25,7 @@ process {
     withName: contigs_realign_reference {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
-    withName: sortsam {
+    withName: contigs_sort_and_index {
         container = 'docker://staphb/samtools:1.12'
     }
     withName: sortreference {
