:telescope: Add samtools indexing of reference genome

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,8 +6,11 @@ process {
     withName: reference_genome_pull {
         container = 'docker://ncbi/edirect:12.5'
     }
-    withName: reference_genome_index {
+    withName: reference_genome_index_bowtie {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
+    }
+    withName: reference_genome_index_samtools {
+        container = 'docker://staphb/samtools:1.12'
     }
     withName: read_classification_ont {
         container = 'docker://staphb/kraken2:2.1.2-no-db'
@@ -28,10 +31,6 @@ process {
     withName: contigs_sort_and_index {
         container = 'docker://staphb/samtools:1.12'
     }
-    withName: sortreference {
-        container = 'docker://staphb/samtools:1.12'
-    }
-
 }
 singularity {
     enabled = true
