:no_entry_sign: Block execution if `--ont` or `--pe` isn't passed

--- a/nextflow.config
+++ b/nextflow.config
@@ -36,6 +36,8 @@ singularity {
     enabled = true
 }
 params {
+    ont            = false
+    pe             = false
     dev            = false
     devinputs      = 2
     genomeId       = 'NC_001437'
