:heavy_plus_sign: Add Trimmomatic in for Illumina reads

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,9 @@ process {
     withName: reference_genome_index_samtools {
         container = 'docker://staphb/samtools:1.12'
     }
+    withName: read_trimming {
+        container = 'docker://staphb/trimmomatic:0.39'
+    }
     withName: read_classification_ont {
         container = 'docker://staphb/kraken2:2.1.2-no-db'
         memory = '100 GB'
@@ -51,6 +54,17 @@ params {
     threads        = 4
     tracedir       = '.trace'
     timestamp      = now.format('yyyyMMdd-HH-mm-ss')
+    trimAdapters   = 'NexteraPE-PE.fa'
+    trimMismatches = 2
+    trimPclip      = 30
+    trimClip       = 10
+    trimWinsize    = 0
+    trimWinqual    = 0
+    trimLeading    = 0
+    trimTrailing   = 0
+    trimCrop       = 0
+    trimHeadcrop   = 0
+    trimMinlen     = 0
 }
 timeline {
     enabled = true
