:wrench: Fix names in container config

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,11 +15,11 @@ process {
     withName: read_trimming {
         container = 'docker://staphb/trimmomatic:0.39'
     }
-    withName: read_classification_ont {
+    withName: read_classification {
         container = 'docker://staphb/kraken2:2.1.2-no-db'
         memory = '100 GB'
     }
-    withName: read_filtering_ont {
+    withName: read_filtering {
         conda = 'bioconda::krakentools=1.2'
     }
     withName: assembly_ont {
