:heavy_plus_sign: Add Velvet assembly

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,9 @@ process {
     withName: assembly_ont {
         container = 'docker://staphb/canu:2.1.1'
     }
+    withName: assembly_pe {
+        container = 'library://millironx/default/velvet:1.2.10'
+    }
     withName: contigs_convert_to_fastq {
         container = 'library://millironx/default/julia:1.6.1'
     }
