:heavy_plus_sign: Add Assembly improvement

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,9 @@ process {
     withName: assembly_pe {
         container = 'library://millironx/default/velvet:1.2.10'
     }
+    withName: assembly_pe_improvement {
+        container = 'library://millironx/default/assembly_improvement:1.160490 '
+    }
     withName: contigs_convert_to_fastq {
         container = 'library://millironx/default/julia:1.6.1'
     }
