--- a/nextflow.config
+++ b/nextflow.config
@@ -54,6 +54,7 @@ params {
     outfolder      = ""
     readsfolder    = "."
     runname        = "jev-analysis"
+    kmerLength     = 21
     // Although I haven't seen it documented anywhere, 0 is unclassified reads
     // and 10239 is viral reads
     taxIdsToKeep   = '0 10239'
