:heavy_plus_sign: Add sorting, indexing, and presentation to combined workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,7 +37,10 @@ process {
     withName: contigs_realign_to_reference {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
-    withName: contigs_sort_and_index {
+    withName: reads_realign_to_reference {
+        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
+    }
+    withName: alignment_sort_and_index {
         container = 'docker://staphb/samtools:1.12'
     }
 }
