--- a/nextflow.config
+++ b/nextflow.config
@@ -58,6 +58,8 @@ params {
     readsfolder    = "."
     runname        = "jev-analysis"
     kmerLength     = 21
+    velvetInsLength = 200
+    velvetMinContigLen = 150
     // Although I haven't seen it documented anywhere, 0 is unclassified reads
     // and 10239 is viral reads
     taxIdsToKeep   = '0 10239'
