--- a/nextflow.config
+++ b/nextflow.config
@@ -26,7 +26,7 @@ process {
         container = 'docker://staphb/canu:2.1.1'
     }
     withName: assembly_pe {
-        container = 'library://millironx/default/velvet:1.2.10'
+        container = 'docker://staphb/spades:3.15.2'
     }
     withName: assembly_pe_improvement {
         container = 'library://millironx/default/assembly_improvement:1.160490 '
