--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,8 @@ process {
         container = 'library://millironx/default/assembly_improvement:1.160490 '
     }
     withName: contigs_convert_to_fastq {
+        errorStrategy = 'retry'
+        maxRetries = 2
         container = 'library://millironx/default/julia:1.6.1'
     }
     withName: contigs_realign_to_reference {
@@ -42,6 +44,9 @@ process {
     }
     withName: alignment_sort_and_index {
         container = 'docker://staphb/samtools:1.12'
+    }
+    withName: variants_calling {
+        container = 'docker://staphb/ivar:1.3'
     }
 }
 singularity {
