:heavy_plus_sign: Add reference genome annotation

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,10 @@ Date now = new Date()
 
 process {
     errorStrategy = 'finish'
-    withName: reference_genome_pull {
+    withName: reference_genome_pull_fasta {
+        container = 'docker://ncbi/edirect:12.5'
+    }
+    withName: reference_genome_pull_genbank {
         container = 'docker://ncbi/edirect:12.5'
     }
     withName: reference_genome_index_bowtie {
@@ -11,6 +14,9 @@ process {
     }
     withName: reference_genome_index_samtools {
         container = 'docker://staphb/samtools:1.12'
+    }
+    withName: reference_genome_annotate {
+        conda = 'bioconda::emboss=6.6.0'
     }
     withName: read_trimming {
         container = 'docker://staphb/trimmomatic:0.39'
