:heavy_plus_sign: Add variant calling read-mapper

--- a/nextflow.config
+++ b/nextflow.config
@@ -51,6 +51,11 @@ process {
     withName: variants_calling {
         container = 'docker://staphb/ivar:1.3'
     }
+    withName: multimutation_search {
+        errorStrategy = 'retry'
+        maxRetries = 2
+        container = 'library://millironx/default/julia:1.6.1'
+    }
 }
 singularity {
     enabled = true
