--- a/bin/Project.toml
+++ b/bin/Project.toml
@@ -1,5 +1,9 @@
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
+XAM = "d759349c-bcba-11e9-07c2-5b90f8f05f7c"
