:racehorse::fire: Swap custom Julia convertor script for seqtk

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,9 +35,7 @@ process {
         container = 'docker://staphb/spades:3.15.2'
     }
     withName: contigs_convert_to_fastq {
-        errorStrategy = 'retry'
-        maxRetries = 2
-        container = 'library://millironx/default/julia:1.6.1'
+        container = 'biocontainers/seqtk:v1.3-1-deb_cv1'
     }
     withName: contigs_realign_to_reference {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
