--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,7 @@ process {
         container = 'docker://staphb/spades:3.15.2'
     }
     withName: contigs_convert_to_fastq {
-        container = 'biocontainers/seqtk:v1.3-1-deb_cv1'
+        container = 'staphb/seqtk:1.3'
     }
     withName: contigs_realign_to_reference {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
