:art: Rename variant calling process

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,7 +46,7 @@ process {
     withName: alignment_sort_and_index {
         container = 'docker://staphb/samtools:1.12'
     }
-    withName: variants_calling {
+    withName: variants_calling_ivar {
         container = 'docker://staphb/ivar:1.3'
     }
     withName: multimutation_search {
