--- a/nextflow.config
+++ b/nextflow.config
@@ -49,6 +49,9 @@ process {
     withName: variants_calling_ivar {
         container = 'docker://staphb/ivar:1.3'
     }
+    withName: variants_calling_varscan {
+        container = 'library://millironx/default/varscan:v2.4.4'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
