--- a/nextflow.config
+++ b/nextflow.config
@@ -52,6 +52,9 @@ process {
     withName: variants_calling_varscan {
         container = 'library://millironx/default/varscan:v2.4.4'
     }
+    withName: variants_calling_lofreq {
+        conda = 'bioconda::lofreq=2.1.3.1'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
