--- a/nextflow.config
+++ b/nextflow.config
@@ -55,6 +55,9 @@ process {
     withName: variants_calling_lofreq {
         conda = 'bioconda::lofreq=2.1.3.1'
     }
+    withName: variants_calling_bcftools {
+        container = 'staphb/bcftools:1.12'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
