--- a/nextflow.config
+++ b/nextflow.config
@@ -58,6 +58,9 @@ process {
     withName: variants_calling_bcftools {
         container = 'staphb/bcftools:1.12'
     }
+    withName: variants_calling_snippy {
+        conda = 'bioconda::snippy=3.1-4'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
