:wrench: Use container instead of conda for Snippy

--- a/nextflow.config
+++ b/nextflow.config
@@ -59,7 +59,7 @@ process {
         container = 'staphb/bcftools:1.12'
     }
     withName: variants_calling_snippy {
-        conda = 'bioconda::snippy=3.1-4'
+        container = 'staphb/snippy:4.6.0'
     }
     withName: multimutation_search {
         errorStrategy = 'retry'
