--- a/nextflow.config
+++ b/nextflow.config
@@ -53,7 +53,7 @@ process {
         container = 'library://millironx/default/varscan:v2.4.4'
     }
     withName: variants_calling_lofreq {
-        container = 'niemasd/lofreq:2.1.5'
+        conda = 'bioconda::lofreq=2.1.3.1'
     }
     withName: variants_calling_bcftools {
         container = 'staphb/bcftools:1.12'
