:heavy_plus_sign: Add Sniffles variant caller

--- a/nextflow.config
+++ b/nextflow.config
@@ -58,6 +58,9 @@ process {
     withName: variants_calling_snippy {
         container = 'staphb/snippy:4.6.0'
     }
+    withName: variants_calling_sniffles {
+        container = 'library://millironx/default/sniffles:1.0.12b'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
