--- a/nextflow.config
+++ b/nextflow.config
@@ -41,10 +41,7 @@ process {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
     withName: reads_realign_to_reference {
-        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
-    }
-    withName: alignment_sort_and_index {
-        container = 'docker://staphb/samtools:1.12'
+        container = 'niemasd/minimap2_samtools:2.21_1.12'
     }
     withName: variants_calling_ivar {
         container = 'docker://staphb/ivar:1.3'
@@ -59,7 +56,7 @@ process {
         container = 'staphb/snippy:4.6.0'
     }
     withName: variants_calling_sniffles {
-        container = 'library://millironx/default/sniffles:1.0.12b'
+        container = 'erictdawson/sniffles:2021-Jan-20'
     }
     withName: multimutation_search {
         errorStrategy = 'retry'
