:heavy_plus_sign::warning: Add variants statistics calculations

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,6 +46,9 @@ process {
     withName: variants_calling_ivar {
         container = 'docker://staphb/ivar:1.3'
     }
+    withName: variants_analysis {
+        container = 'mgibio/bam-readcount'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
