:heavy_plus_sign: Add variant filtering to workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -49,6 +49,11 @@ process {
     withName: variants_analysis {
         container = 'mgibio/bam-readcount'
     }
+    withName: variants_filter {
+        errorStrategy = 'retry'
+        maxRetries = 2
+        container = 'library://millironx/default/julia:1.6.1'
+    }
     withName: multimutation_search {
         errorStrategy = 'retry'
         maxRetries = 2
