:arrows_clockwise: Use my own minimap2 image

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,7 +41,7 @@ process {
         container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
     }
     withName: reads_realign_to_reference {
-        container = 'niemasd/minimap2_samtools:2.21_1.12'
+        container = 'library://millironx/default/minimap_plus:2.22'
     }
     withName: variants_calling_ivar {
         container = 'docker://staphb/ivar:1.3'
