--- a/bin/Project.toml
+++ b/bin/Project.toml
@@ -5,6 +5,7 @@ BioSymbols = "3c28c6f8-a34d-59c4-9654-267d177fcfa9"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GenomicFeatures = "899a7d2d-5c61-547b-bef9-6698a8d05446"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 XAM = "d759349c-bcba-11e9-07c2-5b90f8f05f7c"
