:microscope: Create haplotype types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "haplotypefrequencies",
         "haplotypeoccurances",
         "haplotypes",
+        "individualhaplotypes",
         "linkage",
         "possiblehaplotypes",
         "Δlinkage"
