--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
     "cSpell.words": [
         "FASTX",
+        "Nanopore",
         "baifile",
+        "bamcounts",
+        "bamfields",
+        "bamline",
+        "bammatch",
+        "bammatches",
+        "bamref",
+        "delim",
         "haplotype",
         "haplotypecounts",
         "haplotypedata",
@@ -9,8 +17,10 @@
         "haplotypeoccurances",
         "haplotypes",
         "individualhaplotypes",
+        "ivar",
         "linkage",
         "possiblehaplotypes",
+        "pvalue",
         "Δlinkage"
     ],
     "julia.environmentPath": "/home/tchristensen/src/jev-analysis-pipeline/bin",
