--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 bin/variantfilter linguist-language=Julia
 bin/find-variant-reads linguist-language=Julia
+nextflow.config linguist-language=Nextflow
