:heavy_plus_sign: Add frequency statistic filtering

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "bammatches",
         "bamref",
         "delim",
+        "equalhaplotypes",
         "haplotype",
         "haplotypecounts",
         "haplotypedata",
