:heavy_plus_sign: Add assembly back in

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,11 +34,8 @@ process {
     withName: assembly_pe {
         container = 'docker://staphb/spades:3.15.2'
     }
-    withName: contigs_convert_to_fastq {
-        container = 'staphb/seqtk:1.3'
-    }
     withName: contigs_realign_to_reference {
-        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
+        container = 'library://millironx/default/minimap_plus:2.22'
     }
     withName: reads_realign_to_reference {
         container = 'library://millironx/default/minimap_plus:2.22'
