:racehorse::bug: Major overhaul to prevent cross-stream data flow

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,16 +9,16 @@ process {
     withName: reference_genome_pull_genbank {
         container = 'docker://ncbi/edirect:12.5'
     }
-    withName: reference_genome_index_bowtie {
-        container = 'docker://biocontainers/bowtie2:v2.4.1_cv1'
-    }
     withName: reference_genome_index_samtools {
         container = 'docker://staphb/samtools:1.12'
     }
     withName: reference_genome_annotate {
         conda = 'bioconda::emboss=6.6.0'
     }
-    withName: read_trimming {
+    withName: read_trimming_ont {
+        conda = 'bioconda::nanofilt=2.8.0'
+    }
+    withName: read_trimming_pe {
         container = 'docker://staphb/trimmomatic:0.39'
     }
     withName: read_classification {
