:heavy_plus_sign: Add CliqueSNV haplotype finding

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,6 +43,9 @@ process {
     withName: variants_calling_ivar {
         container = 'docker://staphb/ivar:1.3'
     }
+    withName: haplotype_calling_cliquesnv {
+        container = 'library://millironx/default/clique-snv:2.0.2'
+    }
     withName: variants_analysis {
         container = 'mgibio/bam-readcount'
     }
