--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ import java.time.*
 Date now = new Date()
 
 process {
-    errorStrategy = 'finish'
+    errorStrategy = 'ignore'
     withName: reference_genome_pull_fasta {
         container = 'docker://ncbi/edirect:12.5'
     }
