:gear: Update Nextflow config to use submodules

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,10 @@
 import java.time.*
 Date now = new Date()
 
+manifest {
+    recurseSubmodules = true
+}
+
 process {
     errorStrategy = 'ignore'
     withName: reference_genome_pull_fasta {
