:arrows_clockwise: Swap Prower for filtlong for ONT trimming

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ process {
         conda = 'bioconda::emboss=6.6.0'
     }
     withName: read_trimming_ont {
-        conda = 'bioconda::nanofilt=2.8.0'
+        container = 'staphb/filtlong:0.2.1'
     }
     withName: read_trimming_pe {
         container = 'docker://staphb/trimmomatic:0.39'
@@ -77,26 +77,25 @@ params {
     outfolder      = ""
     readsfolder    = "."
     runname        = "jev-analysis"
-    kmerLength     = 21
-    velvetInsLength = 200
-    velvetMinContigLen = 150
     // Although I haven't seen it documented anywhere, 0 is unclassified reads
     // and 10239 is viral reads
-    taxIdsToKeep   = '0 10239'
-    threads        = 4
-    tracedir       = '.trace'
-    timestamp      = now.format('yyyyMMdd-HH-mm-ss')
-    trimAdapters   = 'NexteraPE-PE.fa'
-    trimMismatches = 2
-    trimPclip      = 30
-    trimClip       = 10
-    trimWinsize    = 50
-    trimWinqual    = 15
-    trimLeading    = 15
-    trimTrailing   = 15
-    trimCrop       = 0
-    trimHeadcrop   = 0
-    trimMinlen     = 100
+    taxIdsToKeep    = '0 10239'
+    threads         = 4
+    tracedir        = '.trace'
+    timestamp       = now.format('yyyyMMdd-HH-mm-ss')
+    trimAdapters    = 'NexteraPE-PE.fa'
+    trimMismatches  = 2
+    trimPclip       = 30
+    trimClip        = 10
+    trimWinsize     = 50
+    trimWinqual     = 15
+    trimLeading     = 15
+    trimTrailing    = 15
+    trimCrop        = 0
+    trimHeadcrop    = 0
+    trimMinlen      = 100
+    trimKeepPercent = 90
+    trimTargetBases = 500000000
 }
 timeline {
     enabled = true
