--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
     "julia.environmentPath": "/home/tchristensen/src/jev-analysis-pipeline/bin",
     "python.pythonPath": "/home/tchristensen/miniconda3/envs/jev-analysis-pipeline/bin/python",
     "files.associations": {
-        "*find-variant-reads": "julia",
+        "*haplotype-finder": "julia",
         "*variantfilter": "julia",
         "nextflow.config": "nextflow"
     }
