--- a/nextflow.config
+++ b/nextflow.config
@@ -58,7 +58,7 @@ process {
         maxRetries = 2
         container = 'library://millironx/default/julia:1.6.2'
     }
-    withName: multimutation_search {
+    withLabel: julia {
         errorStrategy = 'retry'
         maxRetries = 2
         container = 'library://millironx/default/julia:1.6.2'
