:heavy_plus_sign: Remove invalid records from BAM files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
     "files.associations": {
         "*haplotype-finder": "julia",
         "*variantfilter": "julia",
+        "*remove-invalid-reads": "julia",
         "nextflow.config": "nextflow"
     }
 }
