--- a/nextflow.config
+++ b/nextflow.config
@@ -63,6 +63,9 @@ process {
         maxRetries = 2
         container = 'library://millironx/default/julia:1.6.2'
     }
+    withLabel: samtools {
+        container = 'staphb/samtools:1.12'
+    }
 }
 singularity {
     enabled = true
