:bug: Allow CliqueSNV to use more memory

--- a/nextflow.config
+++ b/nextflow.config
@@ -99,6 +99,7 @@ params {
     trimMinlen      = 100
     trimKeepPercent = 90
     trimTargetBases = 500000000
+    cliquemem       = '10G'
 }
 timeline {
     enabled = true
