--- a/nextflow.config
+++ b/nextflow.config
@@ -6,70 +6,62 @@ manifest {
 }
 
 process {
+    // All-process defaults
     errorStrategy = 'ignore'
-    withName: reference_genome_pull_fasta {
-        container = 'docker://ncbi/edirect:12.5'
-    }
-    withName: reference_genome_pull_genbank {
-        container = 'docker://ncbi/edirect:12.5'
-    }
-    withName: reference_genome_index_samtools {
-        container = 'docker://staphb/samtools:1.12'
-    }
-    withName: reference_genome_annotate {
-        conda = 'bioconda::emboss=6.6.0'
-    }
-    withName: read_trimming_ont {
-        container = 'staphb/filtlong:0.2.1'
-    }
-    withName: read_trimming_pe {
-        container = 'docker://staphb/trimmomatic:0.39'
-    }
-    withName: read_classification {
-        container = 'docker://staphb/kraken2:2.1.2-no-db'
-        memory = '100 GB'
-    }
-    withName: read_filtering {
-        conda = 'bioconda::krakentools=1.2'
-    }
-    withName: assembly_ont {
-        container = 'docker://staphb/canu:2.1.1'
-    }
-    withName: assembly_pe {
-        container = 'docker://staphb/spades:3.15.2'
-    }
-    withName: contigs_realign_to_reference {
-        container = 'library://millironx/default/minimap_plus:2.22'
-    }
-    withName: reads_realign_to_reference {
-        container = 'library://millironx/default/minimap_plus:2.22'
-    }
-    withName: variants_calling_ivar {
-        container = 'docker://staphb/ivar:1.3'
-    }
-    withName: haplotype_calling_cliquesnv {
-        container = 'library://millironx/default/clique-snv:2.0.2'
-    }
-    withName: variants_analysis {
+
+    // Per-process container environments
+    // Listed alphabetical, by the tool suite's name
+    withLabel: bam_readcount {
         container = 'mgibio/bam-readcount'
     }
-    withName: variants_filter {
-        errorStrategy = 'retry'
-        maxRetries = 2
-        container = 'library://millironx/default/julia:1.6.2'
+    withLabel: canu {
+        container = 'staphb/canu:2.1.1'
+    }
+    withLabel: cliquesnv {
+        container = 'library://millironx/default/clique-snv:2.0.2'
+    }
+    withLabel: edirect {
+        container = 'ncbi/edirect:12.5'
+    }
+    withLabel: filtlong {
+        container = 'staphb/filtlong:0.2.1'
+    }
+    withLabel: ivar {
+        container = 'staphb/ivar:1.3'
     }
     withLabel: julia {
         errorStrategy = 'retry'
         maxRetries = 2
         container = 'library://millironx/default/julia:1.6.2'
     }
+    withLabel: kraken {
+        container = 'staphb/kraken2:2.1.2-no-db'
+        memory = '100 GB'
+    }
+    withLabel: krakentools {
+        conda = 'bioconda::krakentools=1.2'
+    }
+    withLabel: minimap {
+        container = 'library://millironx/default/minimap_plus:2.22'
+    }
     withLabel: samtools {
         container = 'staphb/samtools:1.12'
     }
+    withLabel: seqret {
+        conda = 'bioconda::emboss=6.6.0'
+    }
+    withLabel: spades {
+        container = 'staphb/spades:3.15.2'
+    }
+    withLabel: trimmomatic {
+        container = 'staphb/trimmomatic:0.39'
+    }
 }
+
 singularity {
     enabled = true
 }
+
 params {
     ont            = false
     pe             = false
@@ -101,18 +93,22 @@ params {
     trimTargetBases = 500000000
     cliquemem       = '10G'
 }
+
 timeline {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_timeline.html"
 }
+
 report {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_report.html"
 }
+
 trace {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_trace.txt"
 }
+
 dag {
     enabled = true
     file = "${params.tracedir}/${params.timestamp}_dag.svg"
