--- a/bin/Project.toml
+++ b/bin/Project.toml
@@ -8,6 +8,8 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 GenomicFeatures = "899a7d2d-5c61-547b-bef9-6698a8d05446"
 HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 XAM = "d759349c-bcba-11e9-07c2-5b90f8f05f7c"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
