--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,7 @@ process {
     withLabel: julia {
         errorStrategy = 'retry'
         maxRetries = 2
-        container = 'library://millironx/default/julia:1.6.2'
+        container = 'millironx/julia:1.6.2'
     }
     withLabel: kraken {
         container = 'staphb/kraken2:2.1.2-no-db'
@@ -39,7 +39,7 @@ process {
         conda = 'bioconda::krakentools=1.2'
     }
     withLabel: minimap {
-        container = 'library://millironx/default/minimap_plus:2.22'
+        container = 'niemasd/minimap2_samtools:2.22_1.12'
     }
     withLabel: samtools {
         container = 'staphb/samtools:1.12'
