:heavy_plus_sign: Add haplotype alignment

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,9 @@ process {
     withLabel: krakentools {
         conda = 'bioconda::krakentools=1.2'
     }
+    withLabel: mafft {
+        container = 'staphb/mafft:7.475'
+    }
     withLabel: minimap {
         container = 'niemasd/minimap2_samtools:2.22_1.12'
     }
