:arrows_clockwise: Use conda for Julia
I have to maintain my own container image that contains both `ps` and
`bash`. This will alleviate that problem.

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,7 @@ process {
     withLabel: julia {
         errorStrategy = 'retry'
         maxRetries = 2
-        container = 'millironx/julia:1.6.2'
+        conda = 'conda-forge::julia=1.6.2'
     }
     withLabel: kraken {
         container = 'staphb/kraken2:2.1.2-no-db'
