:heavy_plus_sign: Add basic phylogenetic tree

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,6 +44,9 @@ process {
     withLabel: minimap {
         container = 'niemasd/minimap2_samtools:2.22_1.12'
     }
+    withLabel: raxml {
+        container = 'evolbioinfo/raxml-ng:v1.0.3'
+    }
     withLabel: samtools {
         container = 'staphb/samtools:1.12'
     }
