:heavy_plus_sign: Add CliqueSNV back in

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,9 @@ process {
     withLabel: canu {
         container = 'staphb/canu:2.1.1'
     }
+    withLabel: cliquesnv {
+        container = 'library://millironx/default/clique-snv:2.0.2'
+    }
     withLabel: edirect {
         container = 'ncbi/edirect:12.5'
     }
@@ -94,6 +97,7 @@ params {
     trimMinlen      = 100
     trimKeepPercent = 90
     trimTargetBases = 500000000
+    cliquemem       = '10G'
 }
 
 timeline {
