:arrows_clockwise: Use biocontainers CliqueSNV

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ process {
         container = 'staphb/canu:2.1.1'
     }
     withLabel: cliquesnv {
-        container = 'library://millironx/default/clique-snv:2.0.2'
+        container = 'quay.io/biocontainers/cliquesnv:2.0.2--hdfd78af_0'
     }
     withLabel: edirect {
         container = 'ncbi/edirect:12.5'
