:muscle: Make container images more explicit for use with podman

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,22 +12,22 @@ process {
     // Per-process container environments
     // Listed alphabetical, by the tool suite's name
     withLabel: bam_readcount {
-        container = 'mgibio/bam-readcount'
+        container = 'docker.io/mgibio/bam-readcount:latest'
     }
     withLabel: canu {
-        container = 'staphb/canu:2.1.1'
+        container = 'quay.io/staphb/canu:2.1.1'
     }
     withLabel: cliquesnv {
         container = 'quay.io/biocontainers/cliquesnv:2.0.2--hdfd78af_0'
     }
     withLabel: edirect {
-        container = 'ncbi/edirect:12.5'
+        container = 'docker.io/ncbi/edirect:12.5'
     }
     withLabel: filtlong {
-        container = 'staphb/filtlong:0.2.1'
+        container = 'quay.io/staphb/filtlong:0.2.1'
     }
     withLabel: ivar {
-        container = 'staphb/ivar:1.3'
+        container = 'quay.io/staphb/ivar:1.3'
     }
     withLabel: julia {
         errorStrategy = 'retry'
@@ -35,32 +35,32 @@ process {
         conda = 'conda-forge::julia=1.6.2'
     }
     withLabel: kraken {
-        container = 'staphb/kraken2:2.1.2-no-db'
+        container = 'quay.io/staphb/kraken2:2.1.2-no-db'
         memory = '100 GB'
     }
     withLabel: krakentools {
         conda = 'bioconda::krakentools=1.2'
     }
     withLabel: mafft {
-        container = 'staphb/mafft:7.475'
+        container = 'quay.io/staphb/mafft:7.475'
     }
     withLabel: minimap {
-        container = 'niemasd/minimap2_samtools:2.22_1.12'
+        container = 'docker.io/niemasd/minimap2_samtools:2.22_1.12'
     }
     withLabel: raxml {
-        container = 'evolbioinfo/raxml-ng:v1.0.3'
+        container = 'docker.io/evolbioinfo/raxml-ng:v1.0.3'
     }
     withLabel: samtools {
-        container = 'staphb/samtools:1.12'
+        container = 'quay.io/staphb/samtools:1.12'
     }
     withLabel: seqret {
         conda = 'bioconda::emboss=6.6.0'
     }
     withLabel: spades {
-        container = 'staphb/spades:3.15.2'
+        container = 'quay.io/staphb/spades:3.15.2'
     }
     withLabel: trimmomatic {
-        container = 'staphb/trimmomatic:0.39'
+        container = 'quay.io/staphb/trimmomatic:0.39'
     }
 }
 
